--- a/registry.html
+++ b/registry.html
@@ -28,43 +28,26 @@
   Пароль должен состоят из английских символов и арабских цифр (8-20 единиц), без эмоджи и специальных символов.
 </div>
 </div>
-<!--    <nav class="navbar navbar-expand-lg bg-body-tertiary">-->
-<!--  <div class="container-fluid">-->
-<!--    <a class="navbar-brand" href="#">Navbar</a>-->
-<!--    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--      <span class="navbar-toggler-icon"></span>-->
-<!--    </button>-->
-<!--    <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--      <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link active" aria-current="page" href="#">Home</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link" href="#">Link</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item dropdown">-->
-<!--          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--            Dropdown-->
-<!--          </a>-->
-<!--          <ul class="dropdown-menu">-->
-<!--            <li><a class="dropdown-item" href="#">Action</a></li>-->
-<!--            <li><a class="dropdown-item" href="#">Another action</a></li>-->
-<!--            <li><hr class="dropdown-divider"></li>-->
-<!--            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-<!--          </ul>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link disabled">Disabled</a>-->
-<!--        </li>-->
-<!--      </ul>-->
-<!--      <form class="d-flex" role="search">-->
-<!--        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-<!--        <button class="btn btn-outline-success" type="submit">Search</button>-->
-<!--      </form>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</nav>-->
-<!--</form>-->
 
+<!DOCTYPE html>
+<html>
+ <head>
+     <style>
+   textarea {
+    width: 100%;
+    height: 200px;
+   }
+  </style>
+  <meta charset="utf-8">
+  <title>Текстовое поле</title>
+ </head>
+ <body>
+ <form>
+  <p><b>Введите ваш отзыв:</b></p>
+  <p><textarea name="comment"></textarea></p>
+  <p><input type="submit"></p>
+ </form>
+ </body>
+</html>
 </body>
 </html>
